--- a/css/main.css
+++ b/css/main.css
@@ -367,7 +367,7 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
   overflow: hidden;
   width: 100%;
   height: 99%;
-  background-color: #49fb35;
+  background-color: rgba(51, 170, 51, .1);
   text-align: center;
   opacity:0;
   filter: alpha(opacity=0);
